Udpate do projeto

--- a/my-app/src/style/shoppingCart.css
+++ b/my-app/src/style/shoppingCart.css
@@ -74,7 +74,7 @@
 
 .cart-products img {
     width: 100px;
-    background-color: #fff;
+    background-color: rgb(238, 238, 238);
 }
 
 .checkout-btn {
