--- a/my-app/src/style/shoppingCart.css
+++ b/my-app/src/style/shoppingCart.css
@@ -85,3 +85,14 @@
     align-self: center;
     margin: 2rem 0;
 }
+.total-price {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #fff;
+    padding: 10px 20px;
+    border: 3px solid #eee;
+    margin: 1rem 0;
+}
