--- a/my-app/src/style/shoppingCart.css
+++ b/my-app/src/style/shoppingCart.css
@@ -78,21 +78,21 @@
 }
 
 .checkout-btn {
-    background-color: var(--main-color);
+    background-color: black;
     padding: 10px 20px;
     font-size: 1rem;
-    color: #fff;
+    color: whitesmoke;
     align-self: center;
     margin: 2rem 0;
 }
-.total-price {
+
+.footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
     width: 100%;
     background-color: #fff;
     padding: 10px 20px;
     border: 3px solid #eee;
-    margin: 1rem 0;
 }
